Remove catchup V1 and V2
The only remaining supported version of the protocol is now V3.

Removed GET_INDEX_SNAPSHOT request which was used to request
a snapshot of non-atomic index files. All index files are atomic
since 4a39caa189cd41a24afde0657f998da83b740944. Request handler
always returned an empty set of index identifiers.